# SynargueAgents

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  api.py  app.py  package-lock.json  pyproject.toml  skills-lock.json  start.ps1
.claude/: settings.local.json
agent/: graph.py  mcptools.py  models.py  nodes.py  redis_memory.py  state.py  tools.py
backend/: config.py  main.py  worker.py
backend/routers/: debate.py  session.py  state.py
backend/schemas/: enums.py  requests.py  responses.py
backend/services/: debate_service.py  session_service.py
backend/utils/: redis_queue.py  serialization.py
data/: history.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js
frontend/src/api/: index.js
frontend/src/components/: DebateInput.vue  FinalResults.vue  LoadingOverlay.vue  MarkdownContent.vue  PhaseTabs.vue  RebuttalFeedback.vue  ResearchReview.vue
frontend/src/router/: index.js
frontend/src/stores/: debate.js
frontend/src/styles/: variables.css
frontend/src/views/: DebateInput.vue  FinalResults.vue  RebuttalFeedback.vue  ResearchReview.vue
