[project]
name = "decisionpal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit",
    "langgraph[redis]>=0.2.0",
    "langgraph-checkpoint-redis>=0.0.1",   # 提供 RedisSaver
    "redis>=4.0.0,<6.0.0",                # Redis 客户端
    "langchain-openai",
    "python-dotenv",
    "langchain>=1.2.17",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
