[project]
name = "decisionpal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit",
    "langgraph[redis]>=0.2.0",
    "langgraph-checkpoint-redis>=0.0.1",   # 提供 RedisSaver
    "redis>=4.0.0,<6.0.0",                # Redis 客户端
    "langchain-openai",
    "python-dotenv",
    "langchain>=1.2.17",
    "langchain-mcp-adapters>=0.2.2",
    "nest-asyncio>=1.6.0",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.1",
    "beautifulsoup4>=4.14.3",
    "requests>=2.33.1",
    "langchain-tavily>=0.2.18",
    "fastapi>=0.136.1",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
