[project]
name = "decisionpal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-redis>=0.0.1",
    "redis>=4.0.0,<6.0.0",
    "langchain-openai",
    "python-dotenv",
    "langchain>=1.2.17",
    "langchain-mcp-adapters>=0.2.2",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.1",
    "beautifulsoup4>=4.14.3",
    "requests>=2.33.1",
    "langchain-tavily>=0.2.18",
    "fastapi>=0.136.1",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.0.0",
    "langchain-deepseek>=1.0.1",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
